# ur5_visual_pickup-with-robotiq-gripper

./: CMakeLists.txt  README.md  package.xml
launch/: initialize_gripper.launch
src/: blocks_poses_publisher.cpp  blocks_spawner.cpp  ur5_gripper_grasp.py  ur5_mp_grasp.py  ur5_vision.py
urdf/: initialize_gripper.world  red_box.urdf
