<?xml version="1.0"?>
<package>
  <name>ur5_pickup</name>
  <version>0.0.0</version>
  <description>The ur5_pickup package</description>

  <maintainer email="luchuanzhao2000@163.com">lu</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend> 
  <run_depend>message_runtime</run_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
